...
import com.github.meeplemeet.ui.theme.Dimensions
import kotlin.math.ceil

/** Object containing test tags used in the Space Renter screen UI for UI testing purposes. */
object SpaceRenterTestTags {
  // Contact section tags
  const val SPACE_RENTER_EDIT_BUTTON = "EDIT_SPACE_BUTTON"

  // Availability section tags
  const val SPACE_RENTER_DAY_PREFIX = "SPACE_RENTER_DAY_"
  const val RESERVE_NO_SELECTION = "RESERVATION_NO_SELECTION"
  const val RESERVE_WITH_SELECTION = "RESERVATION_WITH_SELECTION"
  const val AVAILABILITY_HEADER = "AVAILABILITY_HEADER"
}

object SpaceRenterUi {
  val HORIZONTAL_PADDING: Dp = 100.dp
  val ROW_WIDTH: Dp = 48.dp

...
